Revert "Temporarily hide learning capsules entry"

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div id="recommendationText" class="subtitle">Carregant recomanació...</div>
         </div>
 
-        <a class="learning-card" href="capsules.html" hidden>
+        <a class="learning-card" href="capsules.html">
           <div class="learning-icon" aria-hidden="true">🎓</div>
           <div class="learning-body">
             <p class="learning-kicker">Nou espai</p>
