--- a/capsula-suma-fraccions.html
+++ b/capsula-suma-fraccions.html
@@ -110,6 +110,7 @@
 <body>
   <section id="capsule">
     <div class="row topbar" aria-label="Eines de fons">
+      <a class="btn" href="capsules.html">← Torna al menú</a>
       <button class="btn" id="gridToggle" type="button" aria-label="Canvia el patró de fons" title="Canvia fons">📐</button>
     </div>
     <!-- 1) Objectiu didàctic -->
