--- a/capsules.html
+++ b/capsules.html
@@ -46,7 +46,7 @@
     <section class="capsules-hero">
       <p class="pill" style="display:inline-flex;align-items:center;gap:8px;background:rgba(34,197,94,0.12);color:#047857;font-weight:700;letter-spacing:.08em;text-transform:uppercase">🧠 Nou espai</p>
       <h1>Espai d'aprenentatge</h1>
-      <p>Explora càpsules amb explicacions pas a pas, animacions i activitats autocorrectives per preparar-te abans d'afrontar els exàmens. Ara pots practicar la suma de fraccions amb denominadors diferents i la multiplicació/divisió simbòlica, i molt aviat arribaran més temes!</p>
+      <p>Explora càpsules amb explicacions pas a pas, animacions i activitats autocorrectives per preparar-te abans d'afrontar els exàmens. Ara pots practicar la suma de fraccions amb denominadors diferents, la multiplicació/divisió simbòlica i repassar l'accentuació bàsica pensada per a aules de benvinguda.</p>
     </section>
 
     <section aria-labelledby="capsules-list">
@@ -68,6 +68,15 @@
           <div class="capsule-meta">
             <span>Format llibre + pràctica</span>
             <span aria-hidden="true">Obre la càpsula →</span>
+          </div>
+        </a>
+        <a class="capsule-card" href="capsula-accentuacio-basica.html">
+          <span class="capsule-tag" style="background:rgba(124,58,237,0.12);color:#6d28d9">Llengua</span>
+          <h3 class="capsule-title"><span>´</span>Accent en català (nivell bàsic)</h3>
+          <p class="capsule-copy">Aprèn quan cal accentuar paraules agudes, planes i esdrúixoles amb guies visuals, exemples i un qüestionari autocorrectiu.</p>
+          <div class="capsule-meta">
+            <span>Pensat per a aules de benvinguda</span>
+            <span aria-hidden="true">Repassa →</span>
           </div>
         </a>
         <div class="empty-state" aria-live="polite">
