Remove level selection from Catalan, geography, and chemistry modules

--- a/portal/supabase-portal.html
+++ b/portal/supabase-portal.html
@@ -185,9 +185,9 @@
               <span class="portal-field-label">Temps (minuts)</span>
               <input class="input" name="time" type="number" min="0" max="180" value="0" />
             </label>
-            <label>
+            <label id="assignmentLevelField">
               <span class="portal-field-label">Nivell (1-4)</span>
-              <input class="input" name="level" type="number" min="1" max="4" value="1" />
+              <input id="assignmentLevelInput" class="input" name="level" type="number" min="1" max="4" value="1" />
             </label>
           </div>
           <label>
